<resources>
    <string name="app_name">IPL Schedule 21century</string>
    <string name="action_settings">Settings</string>
    <string name="banner_footer_firstpage">ca-app-pub-9191365138707887/5423902059</string>
    <string name="banner_header_secondpage">ca-app-pub-9191365138707887/9854101658</string>
    <string name="banner_footer_secondpage">ca-app-pub-9191365138707887/2330834857</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="MI">Mumbai Indians</string>
    <string name="RCB">Royal Challengers Bangalore</string>
    <string name="DD">Delhi Daredevils</string>
    <string name="SRH">Sunrisers Hyderabad</string>
    <string name="RR">Rajasthan Royals</string>
    <string name="CSK">Chennai Super Kings</string>
    <string name="KKR">Kolkata Knight Riders</string>
    <string name="KXIP">Kings XI Punjab</string>
    <string name="mumbai_team">mumbai</string>
    <string name="delhi_team">delhi</string>
    <string name="rajasthan_team">rajasthan</string>
    <string name="bangalore_team">bangalore</string>
    <string name="chennai_team">chennai</string>
    <string name="hyderabad_team">hyderabad</string>
    <string name="kolkata_team">kolkata</string>
    <string name="punjab_team">punjab</string>
    <string-array name="match_date">
        <item>07-Apr 2018   8:00 PM</item>
        <item>08-Apr 2018   4:00 PM</item>
        <item>08-Apr 2018   8:00 PM</item>
        <item>09-Apr 2018   8:00 PM</item>
        <item>10-Apr 2018   8:00 PM</item>
        <item>11-Apr 2018   8:00 PM</item>
        <item>12-Apr 2018   8:00 PM</item>
        <item>13-Apr 2018   8:00 PM</item>
        <item>14-Apr 2018   4:00 PM</item>
        <item>14-Apr 2018   8:00 PM</item>
        <item>15-Apr 2018   4:00 PM</item>
        <item>15-Apr 2018   8:00 PM</item>
        <item>16-Apr 2018   8:00 PM</item>
        <item>17-Apr 2018   8:00 PM</item>
        <item>18-Apr 2018   8:00 PM</item>
        <item>19-Apr 2018   8:00 PM</item>
        <item>20-Apr 2018   8:00 PM</item>
        <item>21-Apr 2018   4:00 PM</item>
        <item>21-Apr 2018   8:00 PM</item>
        <item>22-Apr 2018   4:00 PM</item>
        <item>22-Apr 2018   8:00 PM</item>
        <item>23-Apr 2018   8:00 PM</item>
        <item>24-Apr 2018   8:00 PM</item>
        <item>25-Apr 2018   8:00 PM</item>
        <item>26-Apr 2018   8:00 PM</item>
        <item>27-Apr 2018   8:00 PM</item>
        <item>28-Apr 2018   8:00 PM</item>
        <item>29-Apr 2018   4:00 PM</item>
        <item>29-Apr 2018   8:00 PM</item>
        <item>30-Apr 2018   8:00 PM</item>
        <item>01-May 2018   8:00 PM</item>
        <item>02-May 2018   8:00 PM</item>
        <item>03-May 2018   8:00 PM</item>
        <item>04-May 2018   8:00 PM</item>
        <item>05-May 2018   4:00 PM</item>
        <item>05-May 2018   8:00 PM</item>
        <item>06-May 2018   4:00 PM</item>
        <item>06-May 2018   8:00 PM</item>
        <item>07-May 2018   8:00 PM</item>
        <item>08-May 2018   8:00 PM</item>
        <item>09-May 2018   8:00 PM</item>
        <item>10-May 2018   8:00 PM</item>
        <item>11-May 2018   8:00 PM</item>
        <item>12-May 2018   4:00 PM</item>
        <item>12-May 2018   8:00 PM</item>
        <item>13-May 2018   4:00 PM</item>
        <item>13-May 2018   8:00 PM</item>
        <item>14-May 2018   8:00 PM</item>
        <item>15-May 2018   8:00 PM</item>
        <item>16-May 2018   8:00 PM</item>
        <item>17-May 2018   8:00 PM</item>
        <item>18-May 2018   8:00 PM</item>
        <item>19-May 2018   4:00 PM</item>
        <item>19-May 2018   8:00 PM</item>
        <item>20-May 2018   4:00 PM</item>
        <item>20-May 2018   8:00 PM</item>
        <item>22-May 2018   8:00 PM</item>
        <item>23-May 2018   8:00 PM</item>
        <item>25-May 2018   8:00 PM</item>
        <item>27-May 2018   8:00 PM</item>
    </string-array>
    <string-array name="matches">
        <item>MI	vs CSK</item>
        <item>DD	vs KXIP</item>
        <item>KKR	vs RCB</item>
        <item>SRH	vs RR</item>
        <item>CSK	vs KKR</item>
        <item>RR	vs DD</item>
        <item>SRH	vs MI</item>
        <item>RCB	vs KXIP</item>
        <item>MI	vs DD</item>
        <item>KKR	vs SRH</item>
        <item>RCB	vs RR</item>
        <item>KXIP  vs CSK</item>
        <item>KKR	vs DD</item>
        <item>MI	vs RCB</item>
        <item>RR	vs KKR</item>
        <item>KXIP  vs SRH</item>
        <item>CSK	vs RR</item>
        <item>KKR	vs KXIP</item>
        <item>DD	vs RCB</item>
        <item>SRH	vs CSK</item>
        <item>RR	vs MI</item>
        <item>KXIP  vs DD</item>
        <item>MI	vs SRH</item>
        <item>RCB	vs CSK</item>
        <item>SRH	vs KXIP</item>
        <item>DD	vs KKR</item>
        <item>CSK	vs MI</item>
        <item>RR	vs SRH</item>
        <item>RCB	vs KKR</item>
        <item>CSK	vs DD</item>
        <item>RCB	vs MI</item>
        <item>DD	vs RR</item>
        <item>KKR	vs CSK</item>
        <item>KXIP 	vs MI</item>
        <item>CSK	vs RCB</item>
        <item>SRH	vs DD</item>
        <item>MI	vs KKR</item>
        <item>KXIP  vs RR</item>
        <item>SRH	vs RCB</item>
        <item>RR	vs KXIP</item>
        <item>KKR	vs MI</item>
        <item>DD	vs SRH</item>
        <item>RR	vs CSK</item>
        <item>KXIP  vs KKR</item>
        <item>RCB	vs DD</item>
        <item>CSK	vs SRH</item>
        <item>MI	vs RR</item>
        <item>KXIP  vs RCB</item>
        <item>KKR	vs RR</item>
        <item>MI	vs KXIP</item>
        <item>RCB	vs SRH</item>
        <item>DD	vs CSK</item>
        <item>RR	vs RCB</item>
        <item>SRH	vs KKR</item>
        <item>DD	vs MI</item>
        <item>CSK	vs KXIP</item>
        <item>TBD	vs TBD</item>
        <item>TBD	vs TBD</item>
        <item>TBD	vs TBD</item>
        <item>TBD	vs TBD</item>
    </string-array>
    <string-array name="venue">
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>Kolkata</item>
        <item>Hyderabad</item>
        <item>Chennai</item>
        <item>Jaipur</item>
        <item>Hyderabad</item>
        <item>Bangalore</item>
        <item>Mumbai</item>
        <item>Kolkata</item>
        <item>Bangalore</item>
        <item>Indore</item>
        <item>Kolkata</item>
        <item>Mumbai</item>
        <item>Jaipur</item>
        <item>Indore</item>
        <item>Chennai</item>
        <item>Kolkata</item>
        <item>Delhi</item>
        <item>Hyderabad</item>
        <item>Jaipur</item>
        <item>Indore</item>
        <item>Mumbai</item>
        <item>Bangalore</item>
        <item>Hyderabad</item>
        <item>Delhi</item>
        <item>Chennai</item>
        <item>Jaipur</item>
        <item>Bangalore</item>
        <item>Chennai</item>
        <item>Bangalore</item>
        <item>Delhi</item>
        <item>Kolkata</item>
        <item>Mohali</item>
        <item>Chennai</item>
        <item>Hyderabad</item>
        <item>Mumbai</item>
        <item>Mohali</item>
        <item>Hyderabad</item>
        <item>Jaipur</item>
        <item>Kolkata</item>
        <item>Delhi</item>
        <item>Jaipur</item>
        <item>Mohali</item>
        <item>Bangalore</item>
        <item>Chennai</item>
        <item>Mumbai</item>
        <item>Mohali</item>
        <item>Kolkata</item>
        <item>Mumbai</item>
        <item>Bangalore</item>
        <item>Delhi</item>
        <item>Jaipur</item>
        <item>Hyderabad</item>
        <item>Delhi</item>
        <item>Chennai</item>
        <item>Mumbai</item>
        <item>Pune</item>
        <item>Pune</item>
        <item>Mumbai</item>
    </string-array>
    <string name="title_activity_exact_team">exactTeam</string>
    <string name="title_activity_player">playerActivity</string>
    <string-array name="mumbaiAll">
        <item>Rohit Sharma ©</item>
        <item>Kieron Pollard ✈</item>
        <item>Evin Lewis ✈</item>
        <item>Suryakumar Yadav</item>
        <item>Saurabh Tiwary</item>
        <item>Sharad Lumba</item>
        <item>Siddesh Lad</item>
        <item>Mayank Markande</item>
        <item>Tajinder S Dhillon</item>
        <item>Ishan Kishan</item>
        <item>Aditya Tare</item>
        <item>Hardik Pandya</item>
        <item>krunal Pandya</item>
        <item>JP Duminy ✈</item>
        <item>Ben Cutting ✈</item>
        <item>Ankul Roy</item>
        <item>Jasprit Bumrah</item>
        <item>Pat Cummins ✈</item>
        <item>Mustafizur Rahman ✈</item>
        <item>Rahul Chahar</item>
        <item>Pradeep Sanghwan</item>
        <item>Mitchell McClenaghan ✈</item>
        <item>Akila Dananjaya ✈</item>
        <item>MD Nidheesh</item>
        <item>Mohsin Khan</item>
        <item>Sachin Tendulkar</item>
        <item>Mahela Jayawardene</item>
        <item>Shane Bond</item>
        <item>Robin Singh</item>
        <item>James Pamment</item>
        <item>Lasith Malinga</item>
    </string-array>
    <string-array name="mumbaiPrice">
        <item>₹15Cr</item>
        <item>₹5.4Cr</item>
        <item>₹3.8Cr</item>
        <item>₹3.2Cr</item>
        <item>₹80L</item>
        <item>₹20L</item>
        <item>₹20L</item>
        <item>₹55L</item>
        <item>₹6.2Cr</item>
        <item>₹20L</item>
        <item>₹11Cr</item>
        <item>₹8.8Cr</item>
        <item>₹1Cr</item>
        <item>₹2.2Cr</item>
        <item>₹20L</item>
        <item>₹7Cr</item>
        <item>₹5.4Cr</item>
        <item>₹2.2Cr</item>
        <item>₹1.9Cr</item>
        <item>₹1.5Cr</item>
        <item>₹1Cr</item>
        <item>₹50L</item>
        <item>₹20L</item>
        <item>₹20L</item>
        <item>₹20L</item>
        <item>Icon</item>
        <item>Head Coach</item>
        <item>Bowling Coach</item>
        <item>Batting Coach</item>
        <item>Fielding Coach</item>
        <item>Bowling Mentor</item>
    </string-array>
    <string-array name="mumbaiRuns">
        <item>4207</item>
        <item>2343</item>
        <item>-</item>
        <item>608</item>
        <item>1276</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>319</item>
        <item>339</item>
        <item>406</item>
        <item>480</item>
        <item>1993</item>
        <item>124</item>
        <item>-</item>
        <item>25</item>
        <item>77</item>
        <item>-</item>
        <item>3</item>
        <item>24</item>
        <item>63</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>2334</item>
        <item>1802</item>
        <item>1</item>
        <item>-</item>
        <item>-</item>
        <item>88</item>
    </string-array>
    <string-array name="mumbaiWickets">
        <item>15</item>
        <item>56</item>
        <item>-</item>
        <item>0</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>10</item>
        <item>16</item>
        <item>23</item>
        <item>7</item>
        <item>-</item>
        <item>46</item>
        <item>17</item>
        <item>17</item>
        <item>2</item>
        <item>35</item>
        <item>54</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>9</item>
        <item>-</item>
        <item>-</item>
        <item>154</item>
    </string-array>
</resources>